# griffinLog

./: .gitignore  CMakeLists.txt  LICENSE  Log.c  Log.h  README.md  griffinLog.c  griffinLog.h  jkscLog.c  jkscLog.h  test.new
benchmark/: bench_build.sh  benchmark.c  benchmark.cpp  bm_build.sh  bm_million.c
cpp/: Log.cpp  Log.hpp  jkscLog.cpp  jkscLog.hpp
test/: build.sh  error_test_c.c  test.c  test_buffer_overflow.c  test_c.c  test_cpp.cpp  test_exception.cpp
